Resolved speech recognition issue

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "server": "node server/index.js",
-    "start": "concurrently \"npm run dev\" \"npm run server\"",
+    "python": "cd python_server && python app.py",
+    "start": "concurrently --names \"FRONTEND,BACKEND,VISION\" --prefix-colors \"cyan,green,magenta\" \"npm run dev\" \"npm run server\" \"npm run python\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
