--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ dist-ssr
 .env.local
 .env.*.local
 
+# NURA Voice Build Artifacts
+NURA Voice/build/
+NURA Voice/dist/
+*.spec
+__pycache__/
+*.pyc
