Resolved api key issues

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.42.0",
     "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.3.1",
     "firebase": "^12.9.0",
     "framer-motion": "^12.27.0",
     "lucide-react": "^0.562.0",
