--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@google/genai": "^1.37.0",
-    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "openai": "^6.22.0"
   }
 }
