--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "openai": "^6.22.0"
+    "multer": "^2.0.2",
+    "openai": "^6.22.0",
+    "pdf-parse": "^2.4.5"
   }
 }
